--- a/composer.json
+++ b/composer.json
@@ -1,41 +1,41 @@
 {
-    "name": "hipsterjazzbo/landlord",
-    "description": "A simple, single database multi-tenancy solution for Laravel 5.2+",
-    "license": "MIT",
-    "keywords": [
-        "tenant",
-        "tenancy",
-        "multitenant",
-        "multitenancy"
-    ],
-    "authors": [
-        {
-            "name": "Caleb Fidecaro",
-            "email": "calebfidecaro@gmail.com"
-        }
-    ],
-    "require": {
-        "php": ">=5.6.0",
-        "illuminate/support": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*"
-    },
-    "require-dev": {
-        "mockery/mockery": "~0.9|~1.0",
-        "phpunit/phpunit": "5.5.*|6.0.*|7.0.*",
-        "laravel/framework": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*"
-    },
-    "autoload": {
-        "psr-4": {
-            "HipsterJazzbo\\Landlord\\": "src/"
-        }
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "HipsterJazzbo\\Landlord\\LandlordServiceProvider"
-            ],
-            "aliases": {
-                "Landlord": "HipsterJazzbo\\Landlord\\Facades\\Landlord"
-            }
-        }
+  "name": "hipsterjazzbo/landlord",
+  "description": "A simple, single database multi-tenancy solution for Laravel 5.2+",
+  "license": "MIT",
+  "keywords": [
+    "tenant",
+    "tenancy",
+    "multitenant",
+    "multitenancy"
+  ],
+  "authors": [
+    {
+      "name": "Caleb Fidecaro",
+      "email": "calebfidecaro@gmail.com"
     }
+  ],
+  "require": {
+    "php": ">=5.6.0",
+    "illuminate/support": "^5.5|^6|^7|^8"
+  },
+  "require-dev": {
+    "mockery/mockery": "~0.9|~1.0",
+    "phpunit/phpunit": "5.5.*|6.0.*|7.0.*",
+    "laravel/framework": "^5.5|^6|^7|^8"
+  },
+  "autoload": {
+    "psr-4": {
+      "HipsterJazzbo\\Landlord\\": "src/"
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "HipsterJazzbo\\Landlord\\LandlordServiceProvider"
+      ],
+      "aliases": {
+        "Landlord": "HipsterJazzbo\\Landlord\\Facades\\Landlord"
+      }
+    }
+  }
 }
