--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   "require-dev": {
     "mockery/mockery": "~0.9|~1.0",
     "phpunit/phpunit": "5.5.*|6.0.*|7.0.*",
-    "laravel/framework": "^5.5|^6|^7|^8"
+    "laravel/framework": "^5.5|^6|^7|^8|^9"
   },
   "autoload": {
     "psr-4": {
