--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   ],
   "require": {
     "php": ">=5.6.0",
-    "illuminate/support": "^5.5|^6|^7|^8"
+    "illuminate/support": "^5.5|^6|^7|^8|^9"
   },
   "require-dev": {
     "mockery/mockery": "~0.9|~1.0",
